--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=sublindwayServer
 server.port = 8070
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=${MY_DB_URL}
-spring.datasource.username=${MY_DB_USERNAME}
-spring.datasource.password=${MY_DB_PASSWORD }
+spring.datasource.url=jdbc:mysql://sublindwaydb.c520k2aukw2i.ap-northeast-2.rds.amazonaws.com:3306/greenboogie
+spring.datasource.username=sublindway
+spring.datasource.password=rmflsqnrl
 
 spring.jpa.properties.hibernate.show_sql=true
 #sql ??? ?? ???
@@ -12,4 +12,3 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.hibernate.ddl-auto=update
 
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-
