--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 AWS_ACCESS_KEY=${AWS_ACCESS_KEY}
 AWS_SECRET_KEY=${AWS_SECRET_KEY}
 AWS_REGION=${AWS_REGION}
-cloud.aws.s3.bucket=${AWS_S3_BUCKET}
+AWS_S3_BUCKET=${AWS_S3_BUCKET}
 
 OCR_SECERET_KEY=${OCR_SECERET_KEY}
 OCR_API=${OCR_API}
