--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,5 +20,9 @@ AWS_S3_BUCKET=${AWS_S3_BUCKET}
 OCR_SECERET_KEY=${OCR_SECERET_KEY}
 OCR_API=${OCR_API}
 
+spring.servlet.multipart.max-file-size=100MB
+spring.servlet.multipart.max-request-size=100MB
+
+
 
 
