--- a/build.gradle
+++ b/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 	implementation 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
 	implementation 'com.amazonaws:aws-java-sdk-s3:1.12.125'
 	implementation 'commons-codec:commons-codec:1.15'
+	implementation 'com.google.code.gson:gson:2.8.7'
 
 }
 
