--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,9 @@ OCR_API=${OCR_API}
 spring.servlet.multipart.max-file-size=100MB
 spring.servlet.multipart.max-request-size=100MB
 
+#KAKAO
+KAKAO_CLIENT_ID=${KAKAO_CLIENT_ID}
+
 
 
 
